--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1130,6 +1130,8 @@ de:
         language: Sprache
         sort: Sortieren nach
         target_audience: Hilfe für wen?
+      more_info_button: Zum Ratgeber
+      more_info_text: 'Mehr Informationen zu:'
       option_any: egal
       pagination:
         back: Zurück
@@ -1142,8 +1144,6 @@ de:
         categories: Kategorien
         filter: Filter
         map: Karte
-      more_info_button: Zum Ratgeber
-      more_info_text: 'Mehr Informationen zu:'
     search_results:
       bridge: für den Suchbegriff
       enclosing: gefunden
@@ -1359,6 +1359,23 @@ de:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: 
+          de: 
+          en: 
+          fa: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+      hero:
+        claim:
+          family: Hilfe für Kinder, Jugendliche und Familien
       modal:
         beta_modal:
           link: schreibe uns einfach eine Nachricht.
@@ -1869,13 +1886,11 @@ de:
     definitions: definitions
     emails: emails
     faq: haeufige-fragen
-    fr: fr
     haeufige-fragen: haeufige-fragen
     home: home
     impressum: impressum
     kontakt: kontakt
     liste: liste
-    liste-de-services: liste-de-services
     new: new
     offers: angebote
     organizations: organisationen
