--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -727,6 +727,8 @@ en:
         language: Language
         sort: Sort by
         target_audience: For whom?
+      more_info_button: To adviser
+      more_info_text: 'More information:'
       option_any: any
       pagination:
         back: Previous
@@ -739,8 +741,6 @@ en:
         categories: Categories
         filter: Filter
         map: Map
-      more_info_button: To adviser
-      more_info_text: 'More information:'
     search_results:
       bridge: for the search term
       enclosing: found
@@ -930,6 +930,23 @@ en:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: 
+          de: 
+          en: 
+          fa: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+      hero:
+        claim:
+          family: Support services for children, teenagers and families
       modal:
         beta_modal:
           link: write us a message.
@@ -1258,7 +1275,7 @@ en:
         designing websites. He's also a good planner. At clarat he is part of
         the IT team. He ensures that our website looks good. His favourite song
         is “Hysteria” by MUSE.
-      meta_description: 
+      meta_description: This is the team behind Germany's help and support service directory. More than 40 colleagues work every day to help you find support services easily.
       michaela: Michaela studied commercial information technology. She's good at inspiring others. And she knows a lot about the media. She's part of the clarat research team. And she also makes sure our website is working properly. Her favourite song is "Digital Love" by Daft Punk.
       nahla: Nahla is an archaeologist. She knows a lot about human history. She can work very quickly. She's in the clarat translator team. She translates clarat into Arabic.  Her favourite song ist "Nassam Allina El Hawa" by Fayrouz.
       nathalie: Nathalie studied human rights and international politics. She can explain things well. And she's a good listener, too. She's part of the clarat research team. She makes sure our website is up-to-date. Her favourite song is "Me in You" by Kings of Convenience.
@@ -1353,7 +1370,7 @@ en:
         text: "First of all, just enter the problem you need help with. Or whatever\nit is that's worrying you. Or choose from our categories. And we'll show \nyou all the relevant support services offers in your neighbourhood. \nWe'll also tell you how to get this support. For example, if you should \ncall or write an email. Or, just stop by."
       meta_description:
         2017-07-17, visits=2: 
-        family: You can easily find help with clarat family. Support services for children, teenagers and families. Online. Up-to-date. All over Berlin.
+        family: You can easily find help for children, teenagers and families with clarat family. Online. In many languages. All over Berlin. And around Germany.
         refugees: You can easily find help with clarat refugees. Support services for refugees. Online. Up-to-date. In many different languages. All over Germany.
       meta_title:
         2017-07-17, visits=2: 
@@ -1472,13 +1489,11 @@ en:
     definitions: definitions
     emails: emails
     faq: frequently-asked-questions
-    fr: fr
     haeufige-fragen: frequently-asked-questions
     home: home
     impressum: impressum
     kontakt: contact
     liste: liste
-    liste-de-services: liste-de-services
     new: new
     offers: offers
     organizations: organizations
